Add type filter to search-metadata-extract/studies batch endpoint
